[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "CAL-1.0"
homepage = "https://github.com/rainlanguage/dotrain"
repository = "https://github.com/rainlanguage/dotrain"

[workspace.dependencies]
regex = "1.10.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
alloy-primitives = "0.5.0"
rain-metadata = "0.0.2-alpha.2"

[workspace.dependencies.dotrain]
path = "crates/dotrain"
version = "6.0.1-alpha.6"
