[package]
name = "dotrain"
version = "0.0.0"
edition = "2021"
description = "Rain language server protocol implementation and compiler"
license = "CAL-1.0"

[lib]
name = "rainlang"
crate-type = ["rlib", "cdylib"]

[features]
cli = []
lsp = []
js-api = ["dep:js-sys", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:tsify"]

[dependencies]
serde = "1.0.192"
serde_json = "1.0.108"
rain-meta = { git = "https://github.com/rainprotocol/rain.metadata.git", branch = "2023-11-11-slither", default-features = false }
regex = "1.10.2"
clap = "4.4.8"
anyhow = "1.0.75"
futures = "0.3.29"
once_cell = "1.18.0"
num-bigint = "0.4.4"
alloy-json-abi = { version = "0.5.0", features = ["serde_json"] }
alloy-sol-types = "0.5.0"
alloy-primitives = "0.5.0"
alloy-dyn-abi = "0.5.0"
topo_sort = "0.4.0"
magic_string = "0.3.4"
async-recursion = "1.0.5"
serde_repr = "0.1.17"
lsp-types = "0.94.1"
getrandom = { version = "0.2.11", features = ["js", "js-sys"] }
revm = { version = "3.5.0", default-features = false, features = ["serde", "std"] }
tokio = { version = "1.34.0", features = ["sync", "macros", "io-util", "rt", "time"] }

# js-api
js-sys = { version = "0.3.66", optional = true }
wasm-bindgen = { version = "0.2.89", optional = true }
serde-wasm-bindgen = { version = "0.6.1", optional = true }
wasm-bindgen-futures = { version = "0.4.39", optional = true }
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"], optional = true }

# wasm
[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen-futures = "0.4.39"
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"] }
