[package]
name = "dotrain"
version = "6.0.1-alpha.21"
description = ".rain to rainlang composer"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
cli = ["dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:tokio"]
js-api = ["dep:js-sys", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:tsify"]

[lib]
name = "dotrain"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "dotrain"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_bytes = "0.11"
futures = "0.3"
magic_string_rain = "0.3.5"
async-recursion = "1"
getrandom = { version = "0", features = ["js", "js-sys"] }
anyhow = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
alloy-primitives = { workspace = true }
rain-metadata = { workspace = true }

# cli
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
clap = { version = "4.4", features = ["cargo", "derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# js-api
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
tsify = { version = "0.4", default-features = false, features = ["wasm-bindgen"], optional = true }

[lints.clippy]
all = "warn"

[dev-dependencies]
proptest = "1.4.0"

[package.metadata.docs.rs]
all-features = true
